--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple Battlensake written in typescript",
   "main": "index.js",
   "scripts": {
+    "serve": "ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Zack Stickles <zstickles@pm.me>",
