--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "index.js",
   "scripts": {
     "serve": "ts-node server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Zack Stickles <zstickles@pm.me>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zstix/zss-ts-snake.git"
+  },
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "express": "^4.17.1",
@@ -15,6 +19,11 @@
     "typescript": "^4.4.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "jest": "^27.1.0",
+    "ts-jest": "^27.0.5"
   }
 }
