--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "express": "^4.17.1",
+    "newrelic": "^8.7.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
